# resume-builder

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  resume-builder.code-workspace  tasks.py
builder/: __init__.py  commands.py  documents.py  environments.py  requirements.txt
docker-texlive/: Dockerfile  sources.list
latex/: awesomecv.cls  temp
notebooks/: templates.ipynb
scripts/: convert.py
src/resume_builder/: __main__.py  cli.py  commands.py  documents.py  jsonresume.py
